[gd_scene load_steps=10 format=2]

[ext_resource path="res://games/combat-game/battle-cage.tscn" type="PackedScene" id=1]
[ext_resource path="res://games/combat-game/fight/combat-player.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/combat-game/fight/fight.gd" type="Script" id=3]
[ext_resource path="res://games/combat-game/combat-agent.tscn" type="PackedScene" id=4]
[ext_resource path="res://terminal-theme.tres" type="Theme" id=5]
[ext_resource path="res://fonts/Workbench-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://games/combat-game/fight/end-menu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[node name="Fight" type="Node2D"]
script = ExtResource( 3 )
CombatPlayer = ExtResource( 2 )
Agent = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CountdownLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -100.0
margin_right = 450.0
margin_bottom = 100.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Countdown"
align = 1

[node name="LoseLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -100.0
margin_right = 450.0
margin_bottom = 100.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Pathetic"
align = 1

[node name="WinLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -100.0
margin_right = 450.0
margin_bottom = 100.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "Lucky one"
align = 1

[node name="KnockoutLabel" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 67.0
margin_top = 63.0
margin_right = 262.0
margin_bottom = 94.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Knockout Mode"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 475, 301 )
current = true
zoom = Vector2( 0.53, 0.6 )

[node name="BattleCage" parent="." instance=ExtResource( 1 )]

[node name="EndMenu" parent="." instance=ExtResource( 7 )]
